[package]
name = "schani_import"
version = "0.1.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
amq-protocol = "^0.16"
diesel = { version = "0.12.0", features = ["postgres"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
futures = "^0.1"
lapin-futures = "^0.8"
rocket = "0.2.8"
rocket_codegen = "0.2.8"
rocket_contrib = "0.2.6"
serde = "0.9"
serde_derive = "0.9"
tokio-core = "0.1.7"
tokio-io = "^0.1"
tokio-timer = "^0.1"
