[package]
name = "schani_import"
version = "0.2.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
amq-protocol = "^0.19"
diesel = { version = "1.0.0-beta1", features = ["postgres"] }
dotenv = "0.10.1"
futures = "^0.1"
hyper = "^0.11"
lapin-futures = "^0.10"
log = "*"
resolve = "0.1.2"
serde = "0.9"
serde_derive = "^1.0"
serde_json="^1.0"
serde_urlencoded = "^0.5"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-timer = "^0.1"
