[package]
name = "schani_import"
version = "0.2.0"
authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]

[dependencies]
amq-protocol = "^0.19"
diesel = { version = "1.0.0-beta1", features = ["postgres"] }
dotenv = "0.11.0"
fern = "*"
futures = "^0.1"
gotham = { git = "https://github.com/gotham-rs/gotham.git" }
gotham_derive = { git = "https://github.com/gotham-rs/gotham.git" }
gotham_middleware_diesel = { git = "https://github.com/ChristophWurst/gotham-middleware-diesel.git" }
gotham_middleware_tokio = { git = "https://github.com/ChristophWurst/gotham-middleware-tokio.git" }
hyper = "^0.11"
lapin-futures = "^0.10"
log = "*"
mime = "*"
schani_library_client = { git = "https://github.com/schani-rs/schani_library_client.git" }
schani_store_client = { git = "https://github.com/schani-rs/schani_store_client.git" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json="^1.0"
serde_urlencoded = "^0.5"
tokio-core = "^0.1"
tokio-io = "^0.1"
tokio-timer = "^0.1"
